--- a/meditrials/clasification/static/clasification/style.css
+++ b/meditrials/clasification/static/clasification/style.css
@@ -1,7 +1,23 @@
-#id_study_and_condition {
+@import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+html *  {
+    font-family: 'Arial', sans-serif !important;
+}
+#id_diagnostico {
     display: block;
 }
 
 #multi-diagnostics .block {
     display: block;
+}
+
+.content {
+    height: 90vh;
+}
+
+.welcome-message {
+    font-size: 2rem;
+}
+
+.card-title-diagnosis {
+    font-size: 1rem;
 }
