--- a/meditrials/clasification/templates/clasification/diagnostic_form.html
+++ b/meditrials/clasification/templates/clasification/diagnostic_form.html
@@ -1,15 +1,17 @@
 {% extends "base.html" %} {% block content %}
-<form method="POST" enctype="multipart/form-data">
-  <!-- Security token -->
-  {% csrf_token %}
+<div class="col-11 col-md-10 col-lg-8 text-center">
+  <form method="POST" enctype="multipart/form-data">
+    <!-- Security token -->
+    {% csrf_token %}
 
-  <!-- Using the formset -->
-  {{ form.as_p }}
+    <!-- Using the formset -->
+    {{ form.as_p }}
 
-  <input type="submit" value="Evaluar" />
-</form>
+    <input type="submit" value="Evaluar" />
+  </form>
+</div>
 <script>
-  ta = document.getElementById("id_study_and_condition");
+  ta = document.getElementById("id_diagnostico");
   ta.className = "form-control";
 
   let myListBtn = document.getElementsByTagName("input");
